--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3fa83924",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import dlib"
+   ]
   },
   {
    "cell_type": "code",
